# freshbooks-timesheet-mcp

./: .dockerignore  .env.example  .gitignore  GETTING_STARTED.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
extension/: README.md  build.sh  manifest.json
freshbooks_mcp/: auth_manager.py  config.py  freshbooks_client.py  models.py  server.py  transformers.py
schedules/: ONBOARDING.md  SCHEDULE.md
scripts/: smoke.py
tests/: test_auth_manager.py  test_client.py  test_config.py  test_server.py  test_transformers.py
